# cyberalerta-guardian

./: .env.evolution.example  .env.example  .env.n8n.example  .env.server.example  .gitignore  LICENSE  README.md  compose.server.yml  docker-compose.evolution.yml  ersgabricyberalerta-guardian  pre_codex_status.txt  pre_codex_worktree_backup.patch
.github/: copilot-instructions.md
apps/windows-shell/src-tauri/: Cargo.toml  tauri.conf.json
apps/windows-shell/src-tauri/capabilities/: default.json
apps/windows-shell/src-tauri/src/: lib.rs  main.rs
backend/: .dockerignore  Dockerfile  README.md  main.py  requirements-dev.txt  requirements.txt
docs/: 00-project-brief.md  01-build-plan.md  API.md  ARCHITECTURE.md  DEMO_GUIDE.md  GITHUB_REPOSITORY_SETUP.md  LINKEDIN_POST.md  LOCAL_SETUP.md  README.md  assisted-proof-of-trust.md  assisted-protection-demo-script.md  assisted-protection-privacy.md  channel-adapter-contract.md  consent-optin-lgpd-v5.md  controlled-agents-v5.md  dual-bot-flows-v5.md  dual-bot-flows.md  evolution-demo-adapter-setup.md  guardian-admin-console.md  metrics_v1.md  mock-whatsapp-adapter.md  n8n-whatsapp-message-templates.md  pattern-intelligence-testing.md  protected-person-response-agent.md  server-deployment.md  simple-channel-intake.md  sprint-19v4-event-model.md  sprint-19v5-event-model-db-foundation.md  sprint-20v5-channel-adapter-contract.md  sprint-5-integration-validation.md  trusted-circle-escalation.md  twilio-sandbox-setup.md  ux-writing-guidelines.md
frontend/: .dockerignore  Dockerfile  README.md  eslint.config.mjs  next.config.js  (+4 more)
(+353 files in other folders)
