[package]
name = "cyberalerta-windows-shell"
version = "0.1.0"
description = "CyberAlerta Guardian — casca nativa Windows (Tauri) sobre o Console/Admin cloud-first. Nao hospeda backend local (Plano Mestre v1.1, Secao 3.4/8.6)."
edition = "2021"

[lib]
name = "cyberalerta_windows_shell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-http = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-store = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
